2012-03-15  6.7.6-1 Anthony  <anthony@griffith...>
  * Rename wand iteration flags to more logical names
  * Fix the MagickWand add/read insertion of new images into wands

2010-11-21  6.6.6-0 Cristy  <quetzlzacatenango@image...>
  * Add DrawGetFontResolution() / DrawSetFontResolution().

2009-10-10  6.5.6-10 Cristy  <quetzlzacatenango@image...>
  * Add MagickSetImageArtifact(), etc.  Wand artifacts are like properties
    except they are not exported.  They are needed for some method such
    as setting compose:args for the composite DisplaceCompositeOp compose
    operator.

2009-08-27  6.5.5-3 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetOpacity/MagickGetOpacity.

2009-07-27  6.5.4-7 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetBorderColor/MagickGetBorderColor.

2009-04-27  6.5.1-9 Cristy  <quetzlzacatenango@image...>
  * Added MagickSetImageFuzz/MagickGetImageFuzz.

2009-03-08  6.4.9-10 Mikko  <mkoppanen@php...>
  * Added DrawGet/SetTextKerning and DrawGet/SetInterWordSpacing.

2008-11-27  6.4.6-7 Cristy  <quetzlzacatenango@image...>
  * MagickSetVirtualPixelMethod() now properly sets and returns the
    virtual pixel method.

2008-11-03  6.4.5-4 Cristy  <quetzlzacatenango@image...>
  * Do not filter drawing commands.

2008-10-27  6.4.5-1 Cristy  <quetzlzacatenango@image...>
  * Add MagickSparseColorImage() API method.
    
2008-02-23  6.3.9-0 Cristy  <quetzlzacatenango@image...>
  * Patch MagickReadImageBlob() to support Postscript which does not have
    native blob support.

2008-01-28  6.3.8-3 Cristy  <quetzlzacatenango@image...>
  * Return wand->images->depth for MagickGetImageDepth();

2008-01-10  6.3.7-10 Cristy  <quetzlzacatenango@image...>
  * Inherit image exception *before* destroying the cloned image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=10415).

2007-11-27  6.3.7-2 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in MagickSetImageProfile() (reference